@@ -7,7 +7,7 @@ AUTOMAKE_OPTIONS = foreign dist-bzip2 1.6
 man_MANS = conntrack.8
 EXTRA_DIST = $(man_MANS) Make_global.am ChangeLog TODO examples
 
-SUBDIRS   = src extensions
+SUBDIRS   = extensions src
 DIST_SUBDIRS = include src extensions
 LINKOPTS  = -lnfnetlink -lnetfilter_conntrack -lpthread
 AM_CFLAGS = -g
