@@ -98,15 +98,6 @@ dnl AC_FUNC_MALLOC
 dnl AC_FUNC_VPRINTF
 dnl AC_CHECK_FUNCS([memset])
 
-dnl--------------------------------
-
-if test ! -z "$libdir"; then
-   MODULE_DIR="\\\"$libdir/conntrack-tools/\\\""
-   CFLAGS="$CFLAGS -DCONNTRACK_LIB_DIR=$MODULE_DIR"
-fi
-
-dnl--------------------------------
-
 dnl AC_CONFIG_FILES([Makefile
 dnl                  debug/Makefile
 dnl                  debug/src/Makefile
