@@ -170,4 +170,8 @@ struct ctproto_handler {
 
 extern void register_proto(struct ctproto_handler *h);
 
+extern void register_tcp(void);
+extern void register_udp(void);
+extern void register_icmp(void);
+
 #endif
