@@ -22,6 +22,7 @@ o remove bogus option to get a conntrack in test.sh example file
 o add aliases --sport and --dport to make it more iptables-like
 o add support for `-L --src-nat' and `-L --dst-nat' to show natted connections
 o update conntrack(8) manpage
+o remove dlopen infrastructure
 
 version 0.9.3 (2006/05/22)
 ------------------------------
